--- a/Copy.html
+++ b/Copy.html
@@ -10,6 +10,7 @@
 <option value="Black current">
 <option value="Strawberry">
 <option value="Mango">
+<option value="Mango">
 <option value="Orange">
 </datalist>
 </form>
